kubefiles/currency.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: currency
      app.kubernetes.io/component: currency
      app.kubernetes.io/instance: currency
    name: python-36
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: registry.access.redhat.com/ubi8/python-36
      from:
        kind: DockerImage
        name: registry.access.redhat.com/ubi8/python-36
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: currency
      app.kubernetes.io/component: currency
      app.kubernetes.io/instance: currency
    name: currency
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: currency
      app.kubernetes.io/component: currency
      app.kubernetes.io/instance: currency
    name: currency
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: currency:latest
    postCommit: {}
    resources: {}
    source:
      contextDir: currencies
      git:
        uri: https://github.com/ricardoalonso/exchange-application.git
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: python-36:latest
      type: Docker
    triggers:
    - github:
        secret: lurffYvrO7ILtkbsmhUX
      type: GitHub
    - generic:
        secret: l9a8lADLanKitElYMr5J
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"currency:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"currency\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: currency
      app.kubernetes.io/component: currency
      app.kubernetes.io/instance: currency
    name: currency
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: currency
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: currency
      spec:
        containers:
        - image: ' '
          name: currency
          ports:
          - containerPort: 5000
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: currency
      app.kubernetes.io/component: currency
      app.kubernetes.io/instance: currency
    name: currency
  spec:
    ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      deployment: currency
  status:
    loadBalancer: {}
kind: List
metadata: {}
