kubefiles/exchange.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: exchange
      app.kubernetes.io/component: exchange
      app.kubernetes.io/instance: exchange
    name: exchange
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: exchange
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"exchange:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"exchange\")].image"}]'
    labels:
      app: exchange
      app.kubernetes.io/component: exchange
      app.kubernetes.io/instance: exchange
    name: exchange
  spec:
    selector:
      matchLabels:
        deployment: exchange
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          deployment: exchange
      spec:
        containers:
        - env:
          - name: NEWS_ENDPOINT
            valueFrom:
              configMapKeyRef:
                key: NEWS_ENDPOINT
                name: exchange
          image: 
          imagePullPolicy: IfNotPresent
          name: exchange
          ports:
          - containerPort: 8080
            protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: exchange
      app.kubernetes.io/component: exchange
      app.kubernetes.io/instance: exchange
    name: exchange
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: exchange:latest
    runPolicy: Serial
    source:
      contextDir: exchange
      git:
        uri: https://github.com/ricardoalonso/exchange-application.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: ubi8-openjdk-17:1.12
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: KDgK6jQ5rw3IE8yjT4q5
      type: GitHub
    - generic:
        secret: r-jTSfZZ3sduS8xHxKnq
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: exchange
      app.kubernetes.io/component: exchange
      app.kubernetes.io/instance: exchange
    name: exchange
  spec:
    lookupPolicy:
      local: false
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: exchange
      app.kubernetes.io/component: exchange
      app.kubernetes.io/instance: exchange
    name: exchange
  spec:
    host: 
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: exchange
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: exchange
  data:
    NEWS_ENDPOINT: http://news:5000
