kubefiles/news.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: news
      app.kubernetes.io/component: news
      app.kubernetes.io/instance: news
    name: news
  spec:
    ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      deployment: news
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"news:1.0"},"fieldPath":"spec.template.spec.containers[?(@.name==\"news\")].image"}]'
    labels:
      app: news
      app.kubernetes.io/component: news
      app.kubernetes.io/instance: news
    name: news
  spec:
    selector:
      matchLabels:
        deployment: news
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          deployment: news
      spec:
        containers:
        - image: 
          imagePullPolicy: IfNotPresent
          name: news
          ports:
          - containerPort: 5000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: news
      app.kubernetes.io/component: news
      app.kubernetes.io/instance: news
    name: news
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/redhattraining/ossm-python-flask-gossip:1.0
      from:
        kind: DockerImage
        name: quay.io/redhattraining/ossm-python-flask-gossip:1.0
      name: "1.0"
      referencePolicy:
        type: Source
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: news
      app.kubernetes.io/component: news
      app.kubernetes.io/instance: news
    name: news
  spec:
    port:
      targetPort: 5000-tcp
    to:
      kind: Service
      name: news
      weight: 100
    wildcardPolicy: None
